--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ numpy==2.2.1
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+polars==1.20.0
 pyarrow==19.0.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
